agregando api de manejo de tokens, se espera que sean solo SBTs
