# src/dtoMappers/token.mapper.ts
@@ -3,7 +3,7 @@ import { Token } from '@/interfaces';
 
 export class TokenDtoMapper {
   static map(token: Token): TokenDto {
-    const { address, name, network_name } = token;
-    return new TokenDto(address, name, network_name);
+    const { _id, address, name, network_name } = token;
+    return new TokenDto(_id, address, name, network_name);
   }
 }
