# src/dtos/index.ts
@@ -3,5 +3,5 @@ export { UserDto } from './user.dto';
 export { ProjectDto } from './project.dto';
 export { CreateProjectDto } from './createProject.dto';
 export { UpdateProjectDto } from './updateProject.dto';
-export { CreateTokentDto } from './createToken.dto';
+export { CreateTokentDto, UpdateTokenDto } from './createToken.dto';
 export { TokenDto } from './token.dto';
