# src/routes/token.route.ts
@@ -3,7 +3,7 @@ import { Router } from 'express';
 import { Routes } from '@/interfaces';
 import { authMiddleware, validationMiddleware } from '@middlewares';
 import { TokenController } from '@controllers';
-import { CreateTokentDto } from '@/dtos';
+import { CreateTokentDto } from '@dtos';
 
 class TokenRoute implements Routes {
   public path = '/tokens';
@@ -16,10 +16,10 @@ class TokenRoute implements Routes {
 
   private initializeRoutes() {
     this.router.post(this.path, authMiddleware, validationMiddleware(CreateTokentDto), this.tokenController.createToken);
-    /*     this.router.get(this.path, authMiddleware, this.projectController.getAllProjects);
-    this.router.get(`${this.path}/:id`, authMiddleware, this.projectController.getProjectById);
-    this.router.delete(`${this.path}/:id`, authMiddleware, this.projectController.deleteProjectById);
-    this.router.patch(`${this.path}/:id`, authMiddleware, validationMiddleware(UpdateProjectDto), this.projectController.modifyProject); */
+    this.router.get(this.path, authMiddleware, this.tokenController.getAllTokens);
+    this.router.get(`${this.path}/:id`, authMiddleware, this.tokenController.getTokenById);
+    this.router.delete(`${this.path}/:id`, authMiddleware, this.tokenController.deleteTokenById);
+    this.router.put(`${this.path}/:id`, authMiddleware, validationMiddleware(CreateTokentDto), this.tokenController.updateToken);
   }
 }
 
